@@ -7,7 +7,7 @@ import com.zilch.washingmachine.model.ProgramConfig;
 public class ProgramFactory {
 
     public Laundry newLaundry(AbstractProgram program, ProgramConfig config) {
-        AbstractStage stage = program.getStages().getFirst();
+        AbstractStage stage = program.getStages().get(0);
 
         Laundry laundry = Laundry.builder().stage(stage).build();
 
